# quazar-node

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONSTITUTION_QUAZAR.md  Cargo.toml  Dockerfile  MANIFEST_QUAZAR.md  README.md  docker-compose.example.yml  docker-compose.yml  quazar_install.sh  quazar_install_complete.sh  test_citizen.sh  test_exchange.sh  test_quick.sh
.github/workflows/: ci.yml
agent/: .env.example  watcher.py
migrations/: 001_initial_schema.sql  002_nodes_last_seen_timestamptz.sql  003_api_keys.sql  004_service_catalog.sql  005_candidacies.sql  006_test_citizens_seed.sql  007_chat.sql  008_initiatives_referendums.sql  009_citizen_credentials.sql  010_rename_test_citizens.sql  011_citizen_pending_status.sql  012_sync_api_keys_role_from_citizens.sql  013_chat_fts_index.sql
scripts/: run_watcher.sh  setup_telegram.sh  smoke.sh  test_bot_notify.sh  test_p2p.sh
site/: README.md  index.html
src/: auth.rs  auth_login.rs  block_producer.rs  blockchain.rs  candidacy.rs  channel.rs  chat.rs  citizen.rs  citizenship_application.rs  crypto.rs  db.rs  email.rs  exchange.rs  exchange.rs.save  gossip.rs  handlers.rs  http.rs  initiative.rs  integration_tests.rs  keys.rs  main.rs  main.rs.backup  main.rs.backup_before_feed  main.rs.backup_blockchain  main.rs.backup_clean  main.rs.backup_duplicates  main.rs.save  main.rs.save.1  models.rs  nodes.rs  pending.rs  projection.rs  referendum.rs  register_verify.rs  response.rs  svod.rs  sync.rs  types.rs  validator.rs  votes.rs
