[package]
name = "quazar_registry"
version = "0.6.0"
edition = "2021"

[dependencies]
dashmap = "5.5"
governor = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
rand = "0.8"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.7", features = ["auth", "limit", "trace", "cors", "compression-gzip"] }
